[project]
name = "agenticchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "streamlit>=1.50.0",
    "tavily-python>=0.7.12",
]
